--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 
 </head>
 
-<body class="has-loading-screen links-hover-effect" data-spy="scroll" data-target=".navigation">
-
+<!-- <body class="has-loading-screen links-hover-effect" data-spy="scroll" data-target=".navigation"> -->
+<body>
 <div class="page-wrapper" id="page-top">
     <header id="page-header">
         <nav class="navigation background-is-dark">
             <div class="container">
                 <div class="wrapper">
                     <div class="left">
-                        <a href="index-v1.html" class="brand"><img src="assets/img/logo.png" alt=""></a>
+                        <a href="index-v1.html" class="brand"><img src="assets/img/logo-schmid.svg" alt=""></a>
                     </div>
                     <!--end left-->
                     <div class="right">
@@ -456,12 +456,39 @@
         </div>
         <!--end container-->
 
+        <div class="block">
+            <div class="container">
+                <div class="logos">
+                    <div class="owl-carousel" data-owl-nav="1" data-owl-dots="0" data-owl-items="4" data-owl-items-mobile="2" data-owl-auto-width="0" data-owl-autoplay="1" data-owl-loop="1">
+                        <div class="logo">
+                            <a href="#"><img src="./assets/img/luziac-logo.webp" alt="Luziac"></a>
+                        </div>
+                        <div class="logo">
+                            <a href="#"><img src="./assets/img/agilizza-logo.webp" alt="Agilizza"></a>
+                        </div>
+                        <div class="logo">
+                            <a href="#"><img src="./assets/img/haus-logo.webp" alt="Haus"></a>
+                        </div>
+                        <div class="logo">
+                            <a href="#"><img src="./assets/img/dreamer-logo.webp" alt="Dreamer"></a>
+                        </div>
+                    </div>
+                </div>
+                <!--end logos-->
+            </div>
+            <!--end container-->
+        </div>
+        <!--end block-->
+
+        
         <div class="block" id="contact">
             <div class="container">
                 <h2>Contato</h2>
                 <div class="contact map">
                     <div class="row">
                         <div class="col-md-5 col-sm-5"  data-scroll-reveal="enter bottom and move 20px">
+                            <h3>Endereço da sua próxima residência</h3>
+                            <div style="overflow:hidden;max-width:100%;width:100%;height:235px;"><div id="my-map-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Estr.+Dr.+Rafael+Elias+José+Aun+-+Jardim+Morumbi,+Indaiatuba+-+SP,+13332-000&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="the-googlemap-enabler" href="https://www.bootstrapskins.com/themes" id="inject-map-data">premium bootstrap themes</a><style>#my-map-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>
                             <div class="row">
                                 <div class="col-md-6 col-sm-6">
                                     <h3>Endereço</h3>
@@ -541,57 +568,8 @@
             <!--end container-->
         </div>
         <!--end block-->
-
-        <div class="container">
-            <hr>
-        </div>
-        <!--end container-->
-
-        <div class="block">
-            <div class="container">
-                <div class="logos">
-                    <div class="owl-carousel" data-owl-nav="1" data-owl-dots="0" data-owl-items="5">
-                        <div class="logo">
-                            <a href="#"><img src="assets/img/logo-1.png" alt=""></a>
-                        </div>
-                        <div class="logo">
-                            <a href="#"><img src="assets/img/logo-2.png" alt=""></a>
-                        </div>
-                        <div class="logo">
-                            <a href="#"><img src="assets/img/logo-3.png" alt=""></a>
-                        </div>
-                        <div class="logo">
-                            <a href="#"><img src="assets/img/logo-4.png" alt=""></a>
-                        </div>
-                        <div class="logo">
-                            <a href="#"><img src="assets/img/logo-5.png" alt=""></a>
-                        </div>
-                        <div class="logo">
-                            <a href="#"><img src="assets/img/logo-6.png" alt=""></a>
-                        </div>
-                        <div class="logo">
-                            <a href="#"><img src="assets/img/logo-7.png" alt=""></a>
-                        </div>
-                        <div class="logo">
-                            <a href="#"><img src="assets/img/logo-8.png" alt=""></a>
-                        </div>
-                    </div>
-                </div>
-                <!--end logos-->
-            </div>
-            <!--end container-->
-        </div>
-        <!--end block-->
-
-
     </div>
     <!--end page-content-->
-
-    <footer id="page-footer" class="block background-is-dark height-600px">
-        <div style="overflow:hidden;max-width:100%;width:100%;height:550px;"><div id="my-map-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Estr.+Dr.+Rafael+Elias+José+Aun+-+Jardim+Morumbi,+Indaiatuba+-+SP,+13332-000&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="the-googlemap-enabler" href="https://www.bootstrapskins.com/themes" id="inject-map-data">premium bootstrap themes</a><style>#my-map-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>
-    </footer>
-    <!--end page-footer-->
-
 </div>
 <!--end page-wrapper-->
 
