--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
 </head>
 
-<!-- <body class="has-loading-screen links-hover-effect" data-spy="scroll" data-target=".navigation"> -->
-<body>
+<body class="has-loading-screen links-hover-effect" data-spy="scroll" data-target=".navigation">
 <div class="page-wrapper" id="page-top">
     <header id="page-header">
         <nav class="navigation background-is-dark">
@@ -551,11 +550,12 @@
                                     <!--end col-md-12 -->
                                 </div>
                                 <!--end row -->
-                                <div class="form-group clearfix">
+                                <div class="form-group action-line">
+                                    <div class="status"></div>
+                                    <img class="loading" src="./assets/img/tube-spinner.svg" width="30px" height="30px"/>
                                     <button type="submit" class="btn pull-right btn-primary btn-rounded" id="form-contact-submit">Enviar</button>
                                 </div>
                                 <!--end form-group -->
-                                <div id="form-contact-status"></div>
                             </form>
                             <!--end form-contact -->
                         </div>
