Correção nos depoimentos

--- a/index.html
+++ b/index.html
@@ -448,6 +448,13 @@
                     <!--end row-->
                 </div>
                 <!--end testimonials-->
+                <div class="background-wrapper">
+                    <div class="bg-transfer opacity-15">
+                        <img src="./assets/img/gallery-big-01.jpg" alt="">
+                    </div>
+                    <div class="background-color background-color-black"></div>
+                </div>
+                <!--end background-wrapper-->
             </div>
             <!--end block-->
         </div>
