--- a/index.html
+++ b/index.html
@@ -6,13 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="ThemeStarz">
 
-    <link href="assets/fonts/font-awesome.css" rel="stylesheet" type="text/css">
-    <link href="assets/fonts/elegant-fonts.css" rel="stylesheet" type="text/css">
+    <meta name="description" content="Em um terreno de 1.024m² no Condomínio Reserva Petrus, o empreendimento combina design arquitetônico inovador com ambientes personalizados e privacidade total.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="http://schmidincorporadora.com.br/aura">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="SCHMID Incorporações - Aura">
+    <meta property="og:description" content="Em um terreno de 1.024m² no Condomínio Reserva Petrus, o empreendimento combina design arquitetônico inovador com ambientes personalizados e privacidade total.">
+    <meta property="og:image" content="http://schmidincorporadora.com.br/aura/assets/img/og-image.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="http://schmidincorporadora.com.br">
+    <meta property="twitter:url" content="http://schmidincorporadora.com.br/aura">
+    <meta name="twitter:title" content="SCHMID Incorporações - Aura">
+    <meta name="twitter:description" content="Em um terreno de 1.024m² no Condomínio Reserva Petrus, o empreendimento combina design arquitetônico inovador com ambientes personalizados e privacidade total.">
+    <meta name="twitter:image" content="http://schmidincorporadora.com.br/aura/assets/img/og-image.jpg">
+
+    <link href="./assets/fonts/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href="./assets/fonts/elegant-fonts.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/owl.carousel.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/style.css?v=3655" type="text/css">
 
     <link rel="icon" type="image/png" href="./assets/img/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="./assets/img/favicon/favicon.svg" />
@@ -36,7 +53,7 @@
                 <div class="wrapper">
                     <div class="left">
                         <a href="/" class="brand" title="Schmid Incorporações">
-                            <img src="assets/img/logo-schmid.svg" alt="Schmid Incorporações">
+                            <img src="./assets/img/logo-schmid.svg" alt="Schmid Incorporações">
                         </a>
                     </div>
                     <!--end left-->
@@ -151,7 +168,7 @@
             <!--end container-->
             <div class="background-wrapper">
                 <div class="bg-transfer opacity-15">
-                    <img src="assets/img/bg-01.jpg" alt="">
+                    <img src="./assets/img/bg-01.jpg" alt="">
                 </div>
                 <div class="background-color background-color-black"></div>
             </div>
@@ -176,7 +193,7 @@
                         <a href="http://vimeo.com/24506451" class="video-player video-popup" data-scroll-reveal="enter bottom and move 50px" title="Video de apresentação">
                             <i class="play-icon arrow_triangle-right"></i>
                             <div class="has-overlay">
-                                <img src="assets/img/image-video.jpg" alt="">
+                                <img src="./assets/img/image-video.jpg" alt="">
                             </div>
                         </a>
                         <!--end video-player-->
@@ -242,8 +259,8 @@
             <div class="owl-carousel big-gallery image-popup-gallery" data-owl-items="3" data-owl-auto-width="1" data-owl-nav="1" data-owl-dots="0" data-owl-center="1" data-owl-loop="0" data-owl-nav-container="#big-gallery-nav">
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura1.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura1-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura1.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura1-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -251,8 +268,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura2.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura2-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura2.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura2-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -260,8 +277,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura3.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura3-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura3.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura3-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -269,8 +286,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura4.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura4-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura4.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura4-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -278,8 +295,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura5.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura5-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura5.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura5-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -287,8 +304,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura6.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura6-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura6.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura6-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -296,8 +313,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura7.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura7-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura7.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura7-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -305,8 +322,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura8.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura8-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura8.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura8-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -314,8 +331,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura9.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura9-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura9.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura9-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -323,8 +340,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura10.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura10-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura10.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura10-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -332,8 +349,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura11.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura11-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura11.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura11-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -341,8 +358,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura12.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura12-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura12.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura12-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -350,8 +367,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura13.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura13-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura13.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura13-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -359,8 +376,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura14.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura14-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura14.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura14-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -368,8 +385,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura15.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura15-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura15.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura15-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -377,8 +394,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura16.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura16-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura16.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura16-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -386,8 +403,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura17.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura17-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura17.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura17-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -395,8 +412,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura18.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura18-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura18.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura18-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -404,8 +421,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="assets/img/house/aura19.webp" class="image" title="Schmid Aura">
-                            <img src="assets/img/house/aura19-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura19.webp" class="image" title="Schmid Aura">
+                            <img src="./assets/img/house/aura19-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -603,26 +620,14 @@
 <!--end page-wrapper-->
 
 <!--end outer-wrapper-->
-<script type="text/javascript" src="assets/js/jquery-2.2.1.min.js"></script>
-<script type="text/javascript" src="assets/js/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
-<script type="text/javascript" src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="assets/js/jquery.validate.min.js"></script>
-<script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
-<script type="text/javascript" src="assets/js/jquery.magnific-popup.min.js"></script>
-<script type="text/javascript" src="assets/js/scrollReveal.min.js"></script>
-<!--<script type="text/javascript" src="assets/js/jquery.appear.js"></script>-->
-<!--<script type="text/javascript" src="assets/js/waypoints.min.js"></script>-->
-<script type="text/javascript" src="assets/js/readmore.min.js"></script>
-<script type="text/javascript" src="assets/js/pace.min.js"></script>
-
-<script type="text/javascript" src="assets/js/custom.js"></script>
-
-<script type="text/javascript">
-    var latitude = 34.038405;
-    var longitude = -117.946944;
-    var markerImage = "assets/img/map-marker.png";
-    var mapTheme = "light";
-    google.maps.event.addDomListener(window, 'load', simpleMap(latitude, longitude, markerImage, mapTheme));
-</script>
+<script type="text/javascript" src="./assets/js/jquery-2.2.1.min.js"></script>
+<script type="text/javascript" src="./assets/js/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="./assets/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="./assets/js/jquery.validate.min.js"></script>
+<script type="text/javascript" src="./assets/js/owl.carousel.min.js"></script>
+<script type="text/javascript" src="./assets/js/jquery.magnific-popup.min.js"></script>
+<script type="text/javascript" src="./assets/js/scrollReveal.min.js"></script>
+<script type="text/javascript" src="./assets/js/readmore.min.js"></script>
+<script type="text/javascript" src="./assets/js/pace.min.js"></script>
+<script type="text/javascript" src="./assets/js/custom.js?v=3655"></script>
 </body>
