--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="wrapper">
                     <div class="left">
                         <a href="/" class="brand" title="Schmid Incorporações">
-                            <img src="./assets/img/logo-schmid.svg" alt="Schmid Incorporações">
+                            <img src="./assets/img/logo-schmid.svg" alt="Schmid Incorporações" width="171" height="16">
                         </a>
                     </div>
                     <!--end left-->
@@ -100,12 +100,12 @@
             <div class="owl-carousel" data-owl-dots="0" data-owl-nav="1" data-owl-autoplay="1" data-owl-loop="1" data-owl-fadeout="1">
                 <div class="hero-slide">
                     <div class="bg-transfer">
-                        <img src="./assets/img/house/aura1.webp" alt="Descrição da imagem">
+                        <img src="./assets/img/house/aura1.webp" alt="Descrição da imagem" width="1920" height="1080">
                     </div>
                 </div>
                 <div class="hero-slide">
                     <div class="bg-transfer">
-                        <img src="./assets/img/house/aura1.webp" alt="Descrição da imagem">
+                        <img src="./assets/img/house/aura1.webp" alt="Descrição da imagem" width="1920" height="1080">
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
             <!--end container-->
             <div class="background-wrapper">
                 <div class="bg-transfer opacity-15">
-                    <img src="./assets/img/bg-01.jpg" alt="">
+                    <img src="./assets/img/bg-01.jpg" alt="Background" width="1920" height="596">
                 </div>
                 <div class="background-color background-color-black"></div>
             </div>
@@ -193,7 +193,7 @@
                         <a href="http://vimeo.com/24506451" class="video-player video-popup" data-scroll-reveal="enter bottom and move 50px" title="Video de apresentação">
                             <i class="play-icon arrow_triangle-right"></i>
                             <div class="has-overlay">
-                                <img src="./assets/img/image-video.jpg" alt="">
+                                <img src="./assets/img/image-video.jpg" alt="Miniatura vídeo" width="554" height="227">
                             </div>
                         </a>
                         <!--end video-player-->
@@ -233,10 +233,10 @@
                             <div class="gallery" data-scroll-reveal="enter right and move 20px">
                                 <div class="owl-carousel one-item-carousel image-popup-plant" data-owl-items="1" data-owl-margin="0" data-owl-nav="0" data-owl-dots="1">
                                     <a href="./assets/img/house/planta1.webp" class="image" title="Planta 1">
-                                        <img src="./assets/img/house/planta1-583x328.webp" alt="Planta 1">
+                                        <img src="./assets/img/house/planta1-583x328.webp" alt="Planta 1" width="583" height="328">
                                     </a>
                                     <a href="./assets/img/house/planta2.webp" class="image" title="Planta 2">
-                                        <img src="./assets/img/house/planta2-583x328.webp" alt="Planta 2">
+                                        <img src="./assets/img/house/planta2-583x328.webp" alt="Planta 2" width="583" height="328">
                                     </a>
                                 </div>
                             </div>
@@ -260,7 +260,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura1.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura1-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura1-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -269,7 +269,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura2.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura2-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura2-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -278,7 +278,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura3.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura3-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura3-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -287,7 +287,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura4.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura4-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura4-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -296,7 +296,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura5.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura5-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura5-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -305,7 +305,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura6.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura6-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura6-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -314,7 +314,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura7.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura7-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura7-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -323,7 +323,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura8.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura8-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura8-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -332,7 +332,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura9.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura9-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura9-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -341,7 +341,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura10.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura10-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura10-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -350,7 +350,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura11.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura11-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura11-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -359,7 +359,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura12.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura12-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura12-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -368,7 +368,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura13.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura13-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura13-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -377,7 +377,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura14.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura14-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura14-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -386,7 +386,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura15.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura15-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura15-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -395,7 +395,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura16.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura16-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura16-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -404,7 +404,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura17.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura17-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura17-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -413,7 +413,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura18.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura18-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura18-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -422,7 +422,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura19.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura19-1140x641.webp" alt="Schmid Aura">
+                            <img src="./assets/img/house/aura19-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
                         </a>
                     </div>
                     <!--end container-->
@@ -467,7 +467,7 @@
                 <!--end testimonials-->
                 <div class="background-wrapper">
                     <div class="bg-transfer opacity-15">
-                        <img src="./assets/img/gallery-big-01.jpg" alt="">
+                        <img src="./assets/img/gallery-big-01.jpg" alt="Background" width="1142" height="571">
                     </div>
                     <div class="background-color background-color-black"></div>
                 </div>
@@ -483,22 +483,22 @@
                     <div class="owl-carousel" data-owl-nav="1" data-owl-dots="0" data-owl-items="4" data-owl-items-mobile="2" data-owl-auto-width="0" data-owl-autoplay="1" data-owl-loop="1">
                         <div class="logo">
                             <a href="https://www.luziac.com.br/" title="Luziac" target="_blank">
-                                <img src="./assets/img/luziac-logo.webp" alt="Luziac">
+                                <img src="./assets/img/luziac-logo.webp" alt="Luziac" width="170" height="64">
                             </a>
                         </div>
                         <div class="logo">
                             <a href="#" title="Agilizza" target="_blank">
-                                <img src="./assets/img/agilizza-logo.webp" alt="Agilizza">
+                                <img src="./assets/img/agilizza-logo.webp" alt="Agilizza" width="170" height="64">
                             </a>
                         </div>
                         <div class="logo">
                             <a href="https://hausarquitetura.com.br/" title="Haus" target="_blank">
-                                <img src="./assets/img/haus-logo.webp" alt="Haus Arquitetura">
+                                <img src="./assets/img/haus-logo.webp" alt="Haus Arquitetura" width="170" height="64">
                             </a>
                         </div>
                         <div class="logo">
                             <a href="https://dreamerengenharia.com.br/" title="Dreamer" target="_blank">
-                                <img src="./assets/img/dreamer-logo.webp" alt="Dreamer Engenharia">
+                                <img src="./assets/img/dreamer-logo.webp" alt="Dreamer Engenharia" width="170" height="64">
                             </a>
                         </div>
                     </div>
@@ -517,7 +517,7 @@
                     <div class="row">
                         <div class="col-md-5 col-sm-5"  data-scroll-reveal="enter bottom and move 20px">
                             <h3>Endereço da sua próxima residência</h3>
-                            <div style="overflow:hidden;max-width:100%;width:100%;height:235px;"><div id="my-map-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Estr.+Dr.+Rafael+Elias+José+Aun+-+Jardim+Morumbi,+Indaiatuba+-+SP,+13332-000&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="the-googlemap-enabler" href="https://www.bootstrapskins.com/themes" id="inject-map-data">premium bootstrap themes</a><style>#my-map-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>
+                            <div style="overflow:hidden;max-width:100%;width:100%;height:235px;"><div id="my-map-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Estr.+Dr.+Rafael+Elias+José+Aun+-+Jardim+Morumbi,+Indaiatuba+-+SP,+13332-000&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8" title="Mapa"></iframe></div><a class="the-googlemap-enabler" href="https://www.bootstrapskins.com/themes" id="inject-map-data">premium bootstrap themes</a><style>#my-map-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>
                             <div class="row">
                                 <div class="col-md-6 col-sm-6">
                                     <h3>Endereço</h3>
