Correção de proporção das imagens

--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
                         <div class="col-md-7 col-sm-7">
                             <div class="gallery" data-scroll-reveal="enter right and move 20px">
                                 <div class="owl-carousel one-item-carousel image-popup-plant" data-owl-items="1" data-owl-margin="0" data-owl-nav="0" data-owl-dots="1">
-                                    <a href="./assets/img/house/planta1.webp" class="image" title="Planta 1">
-                                        <img src="./assets/img/house/planta1-583x328.webp" alt="Planta 1" width="583" height="328">
+                                    <a href="./assets/img/house/planta1.webp" class="image" title="Planta">
+                                        <img src="./assets/img/house/planta1-583x328.webp" alt="Planta" width="583" height="328">
                                     </a>
-                                    <a href="./assets/img/house/planta2.webp" class="image" title="Planta 2">
-                                        <img src="./assets/img/house/planta2-583x328.webp" alt="Planta 2" width="583" height="328">
+                                    <a href="./assets/img/house/planta2.webp" class="image" title="Planta">
+                                        <img src="./assets/img/house/planta2-583x328.webp" alt="Planta" width="583" height="328">
                                     </a>
                                 </div>
                             </div>
@@ -260,7 +260,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura1.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura1-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura1-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -269,7 +269,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura2.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura2-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura2-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -278,7 +278,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura3.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura3-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura3-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -287,7 +287,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura4.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura4-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura4-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -296,7 +296,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura5.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura5-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura5-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -305,7 +305,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura6.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura6-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura6-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -314,7 +314,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura7.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura7-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura7-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -323,7 +323,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura8.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura8-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura8-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -332,7 +332,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura9.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura9-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura9-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -341,7 +341,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura10.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura10-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura10-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -350,7 +350,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura11.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura11-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura11-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -359,7 +359,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura12.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura12-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura12-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -368,7 +368,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura13.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura13-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura13-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -377,7 +377,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura14.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura14-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura14-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -386,7 +386,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura15.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura15-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura15-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -395,7 +395,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura16.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura16-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura16-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -404,7 +404,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura17.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura17-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura17-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -413,7 +413,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura18.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura18-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura18-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -422,7 +422,7 @@
                 <div class="slide">
                     <div class="container">
                         <a href="./assets/img/house/aura19.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura19-1140x641.webp" alt="Schmid Aura" width="1140" height="641">
+                            <img src="./assets/img/house/aura19-1140x641.webp" alt="Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
