--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="./assets/fonts/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="./assets/fonts/elegant-fonts.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="./assets/css/owl.carousel.css" type="text/css">
     <link rel="stylesheet" href="./assets/css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="./assets/css/style.css?v=3655" type="text/css">
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="wrapper">
                     <div class="left">
-                        <a href="/" class="brand" title="Schmid Incorporações">
+                        <a href="/" class="brand image" title="Schmid Incorporações">
                             <img src="./assets/img/logo-schmid.svg" alt="Schmid Incorporações" width="171" height="16">
                         </a>
                     </div>
