--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <a href="http://vimeo.com/24506451" class="video-player video-popup" data-scroll-reveal="enter bottom and move 50px" title="Video de apresentação">
                             <i class="play-icon arrow_triangle-right"></i>
                             <div class="has-overlay">
-                                <img src="./assets/img/image-video.jpg" alt="Miniatura vídeo" width="554" height="227">
+                                <img src="./assets/img/image-video.webp" alt="Miniatura vídeo" width="554" height="227">
                             </div>
                         </a>
                         <!--end video-player-->
