--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="SCHMID Incorporações - Aura">
     <meta property="og:description" content="Em um terreno de 1.024m² no Condomínio Reserva Petrus, o empreendimento combina design arquitetônico inovador com ambientes personalizados e privacidade total.">
-    <meta property="og:image" content="http://schmidincorporadora.com.br/aura/assets/img/og-image.jpg">
+    <!-- <meta property="og:image" content="http://schmidincorporadora.com.br/evidencias/assets/img/og-image.jpg"> -->
+    <meta property="og:image" content="http://grankera.com.br/schmid/evidencias/assets/img/og-image.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -21,7 +22,8 @@
     <meta property="twitter:url" content="http://schmidincorporadora.com.br/aura">
     <meta name="twitter:title" content="SCHMID Incorporações - Aura">
     <meta name="twitter:description" content="Em um terreno de 1.024m² no Condomínio Reserva Petrus, o empreendimento combina design arquitetônico inovador com ambientes personalizados e privacidade total.">
-    <meta name="twitter:image" content="http://schmidincorporadora.com.br/aura/assets/img/og-image.jpg">
+    <!-- <meta name="twitter:image" content="http://schmidincorporadora.com.br/evidencias/assets/img/og-image.jpg"> -->
+    <meta name="twitter:image" content="http://grankera.com.br/schmid/evidencias/assets/img/og-image.jpg">
 
     <link href="./assets/fonts/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="./assets/fonts/elegant-fonts.css" rel="stylesheet" type="text/css">
@@ -190,7 +192,7 @@
                     <!--end col-md-6-->
                     <div class="col-md-6 col-sm-6">
                         <h3>Vídeo de apresentação</h3>
-                        <a href="http://vimeo.com/24506451" class="video-player video-popup" data-scroll-reveal="enter bottom and move 50px" title="Video de apresentação">
+                        <a href="https://www.youtube.com/watch?v=F-GgOtKCnK0" class="video-player video-popup" data-scroll-reveal="enter bottom and move 50px" title="Video de apresentação">
                             <i class="play-icon arrow_triangle-right"></i>
                             <div class="has-overlay">
                                 <img src="./assets/img/image-video.webp" alt="Miniatura vídeo" width="554" height="227">
