--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="SCHMID Incorporações - Aura">
     <meta property="og:description" content="Em um terreno de 1.024m² no Condomínio Reserva Petrus, o empreendimento combina design arquitetônico inovador com ambientes personalizados e privacidade total.">
-    <!-- <meta property="og:image" content="http://schmidincorporadora.com.br/evidencias/assets/img/og-image.jpg"> -->
-    <meta property="og:image" content="http://grankera.com.br/schmid/evidencias/assets/img/og-image.jpg">
+    <meta property="og:image" content="http://schmidincorporadora.com.br/evidencias/assets/img/og-image.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -22,8 +21,7 @@
     <meta property="twitter:url" content="http://schmidincorporadora.com.br/aura">
     <meta name="twitter:title" content="SCHMID Incorporações - Aura">
     <meta name="twitter:description" content="Em um terreno de 1.024m² no Condomínio Reserva Petrus, o empreendimento combina design arquitetônico inovador com ambientes personalizados e privacidade total.">
-    <!-- <meta name="twitter:image" content="http://schmidincorporadora.com.br/evidencias/assets/img/og-image.jpg"> -->
-    <meta name="twitter:image" content="http://grankera.com.br/schmid/evidencias/assets/img/og-image.jpg">
+    <meta name="twitter:image" content="http://schmidincorporadora.com.br/evidencias/assets/img/og-image.jpg">
 
     <link href="./assets/fonts/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="./assets/fonts/elegant-fonts.css" rel="stylesheet" type="text/css">
@@ -170,7 +168,7 @@
             <!--end container-->
             <div class="background-wrapper">
                 <div class="bg-transfer opacity-15">
-                    <img src="./assets/img/bg-01.jpg" alt="Background" width="1920" height="596">
+                    <img src="./assets/img/bg-01.webp" alt="Background" width="1920" height="596">
                 </div>
                 <div class="background-color background-color-black"></div>
             </div>
@@ -469,7 +467,7 @@
                 <!--end testimonials-->
                 <div class="background-wrapper">
                     <div class="bg-transfer opacity-15">
-                        <img src="./assets/img/gallery-big-01.jpg" alt="Background" width="1142" height="571">
+                        <img src="./assets/img/gallery-big-01.webp" alt="Background" width="1142" height="571">
                     </div>
                     <div class="background-color background-color-black"></div>
                 </div>
