--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
                         <div class="col-md-7 col-sm-7">
                             <div class="gallery" data-scroll-reveal="enter right and move 20px">
                                 <div class="owl-carousel one-item-carousel image-popup-plant" data-owl-items="1" data-owl-margin="0" data-owl-nav="0" data-owl-dots="1">
-                                    <a href="./assets/img/house/planta1.webp" class="image" title="Planta">
-                                        <img src="./assets/img/house/planta1-583x328.webp" alt="Planta" width="583" height="328">
+                                    <a href="./assets/img/house/planta1.webp" class="image" title="Planta - Perspectiva">
+                                        <img src="./assets/img/house/planta1-583x328.webp" alt="Planta - Perspectiva" width="583" height="328">
                                     </a>
-                                    <a href="./assets/img/house/planta2.webp" class="image" title="Planta">
-                                        <img src="./assets/img/house/planta2-583x328.webp" alt="Planta" width="583" height="328">
+                                    <a href="./assets/img/house/planta2.webp" class="image" title="Planta - Perspectiva">
+                                        <img src="./assets/img/house/planta2-583x328.webp" alt="Planta - Perspectiva" width="583" height="328">
                                     </a>
                                 </div>
                             </div>
