--- a/index.html
+++ b/index.html
@@ -489,9 +489,7 @@
                         </div>
                         <div class="logo">
                             <span class="text">Gerenciamento:</span>
-                            <a href="#" title="Agilizza" target="_blank">
-                                <img src="./assets/img/agilizza-logo.webp" alt="Agilizza" width="170" height="64">
-                            </a>
+                            <img src="./assets/img/agilizza-logo.webp" alt="Agilizza" width="170" height="64">
                         </div>
                         <div class="logo">
                             <span class="text">Arquitetura:</span>
@@ -607,7 +605,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="note">(C) 2025 Todos os direitos reservados para Schmid Incorporaçõe</div>
+                        <div class="note">(C) 2025 Todos os direitos reservados para Schmid Incorporações</div>
                     </div>
                     <div class="col-md-6 box-by">
                         <p class="by">Desenvolvido por:</p>
